--- a/Server/Server/Server.vcxproj
+++ b/Server/Server/Server.vcxproj
@@ -160,6 +160,7 @@
     <ClCompile Include="clog_color.cpp" />
     <ClCompile Include="cmedia_server.cpp" />
     <ClCompile Include="cmsg_dispatch.cpp" />
+    <ClCompile Include="Consumer.cpp" />
     <ClCompile Include="cortc.cpp" />
     <ClCompile Include="crandom.cpp" />
     <ClCompile Include="crate_calculator.cpp" />
@@ -287,8 +288,10 @@
     <ClCompile Include="RtpRtxParameters.cpp" />
     <ClCompile Include="RtpStream.cpp" />
     <ClCompile Include="RtpStreamRecv.cpp" />
+    <ClCompile Include="RtpStreamSend.cpp" />
     <ClCompile Include="RtxStream.cpp" />
     <ClCompile Include="SeqManager.cpp" />
+    <ClCompile Include="SimpleConsumer.cpp" />
     <ClCompile Include="StunPacket.cpp" />
     <ClCompile Include="TransportCongestionControlClient.cpp" />
     <ClCompile Include="TransportCongestionControlServer.cpp" />
@@ -313,6 +316,7 @@
     <ClInclude Include="cmsg_dispatch.h" />
     <ClInclude Include="cnet_define.h" />
     <ClInclude Include="common_types.h" />
+    <ClInclude Include="Consumer.hpp" />
     <ClInclude Include="cortc.h" />
     <ClInclude Include="crandom.h" />
     <ClInclude Include="crate_calculator.h" />
@@ -454,8 +458,10 @@
     <ClInclude Include="RtpProbationGenerator.hpp" />
     <ClInclude Include="RtpStream.hpp" />
     <ClInclude Include="RtpStreamRecv.hpp" />
+    <ClInclude Include="RtpStreamSend.hpp" />
     <ClInclude Include="RtxStream.hpp" />
     <ClInclude Include="SeqManager.hpp" />
+    <ClInclude Include="SimpleConsumer.hpp" />
     <ClInclude Include="StunPacket.hpp" />
     <ClInclude Include="Tools.hpp" />
     <ClInclude Include="TransportCongestionControlClient.hpp" />
