--- a/Server/Server/Server.vcxproj.filters
+++ b/Server/Server/Server.vcxproj.filters
@@ -604,6 +604,9 @@
     <ClCompile Include="RtpStreamSend.cpp">
       <Filter>rtc</Filter>
     </ClCompile>
+    <ClCompile Include="cmedia_desc.cpp">
+      <Filter>rtc_sdp</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="cnet_type.h">
@@ -1112,6 +1115,12 @@
     </ClInclude>
     <ClInclude Include="RtpStreamSend.hpp">
       <Filter>rtc</Filter>
+    </ClInclude>
+    <ClInclude Include="cmedia_desc.h">
+      <Filter>rtc_sdp</Filter>
+    </ClInclude>
+    <ClInclude Include="cmedia_error.h">
+      <Filter>rtc_sdp</Filter>
     </ClInclude>
   </ItemGroup>
 </Project>
