--- a/Server/Server/Server.vcxproj.filters
+++ b/Server/Server/Server.vcxproj.filters
@@ -157,6 +157,9 @@
     <Filter Include="rtc_net">
       <UniqueIdentifier>{3873831c-7ff7-4f2b-b4a3-d67077519f95}</UniqueIdentifier>
     </Filter>
+    <Filter Include="net">
+      <UniqueIdentifier>{af7692e2-78a3-43ca-b184-1b6aa1d0a101}</UniqueIdentifier>
+    </Filter>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="cnet_type.cpp">
@@ -609,6 +612,21 @@
     </ClCompile>
     <ClCompile Include="crtc_sdp_test.cpp">
       <Filter>rtc_sdp</Filter>
+    </ClCompile>
+    <ClCompile Include="csocket_util.cpp">
+      <Filter>net</Filter>
+    </ClCompile>
+    <ClCompile Include="cip_address.cpp">
+      <Filter>net</Filter>
+    </ClCompile>
+    <ClCompile Include="cwin32.cpp">
+      <Filter>net</Filter>
+    </ClCompile>
+    <ClCompile Include="cnetwork.cpp">
+      <Filter>net</Filter>
+    </ClCompile>
+    <ClCompile Include="cnet_adapter_test.cpp">
+      <Filter>net</Filter>
     </ClCompile>
   </ItemGroup>
   <ItemGroup>
@@ -1127,6 +1145,30 @@
     </ClInclude>
     <ClInclude Include="crtc_sdp_test.h">
       <Filter>rtc_sdp</Filter>
+    </ClInclude>
+    <ClInclude Include="csocket_util.h">
+      <Filter>net</Filter>
+    </ClInclude>
+    <ClInclude Include="cip_address.h">
+      <Filter>net</Filter>
+    </ClInclude>
+    <ClInclude Include="cbyte_order.h">
+      <Filter>net</Filter>
+    </ClInclude>
+    <ClInclude Include="cwin32.h">
+      <Filter>net</Filter>
+    </ClInclude>
+    <ClInclude Include="carraysize.h">
+      <Filter>net</Filter>
+    </ClInclude>
+    <ClInclude Include="cnetwork.h">
+      <Filter>net</Filter>
+    </ClInclude>
+    <ClInclude Include="cnetwork_constants.h">
+      <Filter>net</Filter>
+    </ClInclude>
+    <ClInclude Include="cnet_adapter_test.h">
+      <Filter>net</Filter>
     </ClInclude>
   </ItemGroup>
 </Project>
