--- a/Server/Server/Server.vcxproj.filters
+++ b/Server/Server/Server.vcxproj.filters
@@ -160,6 +160,9 @@
     <Filter Include="net">
       <UniqueIdentifier>{af7692e2-78a3-43ca-b184-1b6aa1d0a101}</UniqueIdentifier>
     </Filter>
+    <Filter Include="media_source">
+      <UniqueIdentifier>{6a43ae28-1e60-4e32-acbd-d3dd5d2c8e2e}</UniqueIdentifier>
+    </Filter>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="cnet_type.cpp">
@@ -627,6 +630,12 @@
     </ClCompile>
     <ClCompile Include="cnet_adapter_test.cpp">
       <Filter>net</Filter>
+    </ClCompile>
+    <ClCompile Include="cmedia_source.cpp">
+      <Filter>media_source</Filter>
+    </ClCompile>
+    <ClCompile Include="cglobal_media_source_mgr.cpp">
+      <Filter>media_source</Filter>
     </ClCompile>
   </ItemGroup>
   <ItemGroup>
@@ -1169,6 +1178,12 @@
     </ClInclude>
     <ClInclude Include="cnet_adapter_test.h">
       <Filter>net</Filter>
+    </ClInclude>
+    <ClInclude Include="cmedia_source.h">
+      <Filter>media_source</Filter>
+    </ClInclude>
+    <ClInclude Include="cglobal_media_source_mgr.h">
+      <Filter>media_source</Filter>
     </ClInclude>
   </ItemGroup>
 </Project>
